--- a/styles/chart.css
+++ b/styles/chart.css
@@ -1,3 +1,101 @@
+body {
+    background-color: #eff0f2;
+    font-family: "Open Sans", sans-serif;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 5vw 1fr 5vw;
+    grid-template-rows: 40vh 1fr 20vh;
+    gap: 30px;
+}
+
+.navigation {
+    border-radius: 10px;
+    margin-left: 20px;
+    height: 100%;
+    background-color: #8691ac;
+    margin: 0;
+    display: flex;
+    grid-column: 2;
+    grid-row: 1;
+}
+.navigation-container{
+    display: flex;
+    width: 100%;
+    
+}
+.navigation-container div{
+    width: 100%;
+}
+.navigation-container__county-details{
+    padding: 1rem;
+}
+.navigation-container__county-details h1{
+    font-size: 4rem;
+    margin: 1.5rem;
+}
+.navigation-container__county-details p{
+    margin: 0 1.5rem 1.5rem 1.5rem;
+}
+
+.navigation-container__county-details a{
+    outline: none;
+    background-color: #404450;
+    border: 1px solid #404450;
+    border-radius: 10px;
+    color: white;
+    padding: 0.7rem;
+    margin: 0 1.5rem 1.5rem 1.5rem;
+    cursor: pointer;
+    text-decoration: none;
+    display: block;
+    max-width: 90px;
+}
+.navigation-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navigation-container__image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.navigation-container__image img{
+    max-width: 40vw;
+    max-height: 40vh;
+}
+
+.visible {
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
+
+.main-frame {
+    grid-column: 2;
+    grid-row: 2;
+    background-color: #8691ac;
+}
+
+.news {
+    grid-row: 2;
+    grid-column: 3;
+    background-color: #8691ac;
+    border-radius: 10px;
+}
+
+#diagrams{
+    grid-row: 2;
+    grid-column: 2;
+}
+#charts{
+    grid-row: 2;
+    grid-column: 2;
+}
 .charts-container__flex-container{
     
     display: flex;
@@ -5,5 +103,12 @@
 }
 .charts-container__flex-container-item{
 
+    width: 72%;
+}
+.charts-container__column-chart{
+
     width: 100%;
+}
+.charts-container__flex-container-item_details-line-chart{
+    width: 40%;
 }
