--- a/components/slider/slider.html
+++ b/components/slider/slider.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Carousel</title>
-<link rel="stylesheet" href="slider.css">
+<link rel="stylesheet" href="components/slider/slider.css">
 </head>
 <body>
 
@@ -12,12 +12,38 @@
   <div class="slides">
     <div class="slide">
       <img src="../../assets/pictures/500px-photography-landscape-wallpaper-preview (1).jpg" alt="Slide 1">
+      <div class="caption">
+        <h2>Title 1</h2>
+        <p>Description for Slide 1</p>
+      </div>
     </div>
     <div class="slide">
       <img src="../../assets/pictures/500px-photography-landscape-wallpaper-preview.jpg" alt="Slide 2">
+      <div class="caption">
+        <h2>Title 2</h2>
+        <p>Description for Slide 2</p>
+      </div>
     </div>
     <div class="slide">
         <img src="../../assets/pictures/stock-photo-121488495-1500x1000.jpg" alt="Slide 2">
+        <div class="caption">
+          <h2>Title 2</h2>
+          <p>Description for Slide 2</p>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="../../assets/pictures/stock-photo-121488495-1500x1000.jpg" alt="Slide 2">
+        <div class="caption">
+          <h2>Title 2</h2>
+          <p>Description for Slide 2</p>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="../../assets/pictures/stock-photo-121488495-1500x1000.jpg" alt="Slide 2">
+        <div class="caption">
+          <h2>Title 2</h2>
+          <p>Description for Slide 2</p>
+        </div>
       </div>
     <!-- Add more slides as needed -->
   </div>
