--- a/components/login-form/login.html
+++ b/components/login-form/login.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
-    <link rel="stylesheet" href="login-form.css">
+    <link rel="stylesheet" href="components/login-form/login-form.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
-<button id="loginBtn">Login</button>
-<p class="test"></p>
+    <h3>Join our comunity</h3>
 <div class="overlay" id="overlay">
     <div class="login-form shown">
         <h2>Please login</h2>
