--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: 15vw 1fr 15vw;
-    grid-template-rows: 15vh 1fr 15vh;
+    grid-template-rows: 15vh 1fr 25vh;
     background: rgb(202,213,245);
     background: radial-gradient(circle, rgba(202,213,245,1) 0%, rgba(186,208,235,1) 100%);
     gap: 15px;
@@ -13,43 +13,17 @@ body {
 .join-comunity {
     grid-row: 1;
     grid-column: 1;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-.join-comunity p {
-    letter-spacing: 2px;
-    font-size: 1.3rem;
-    border: 5px solid #0d1428;
-    color: #0d1428;
-    border-radius: 5px;
-    padding: 16px 4px;
-    text-align: center;
-}
-
-.join-comunity p:hover {
-    border: 5px solid #0d1428;
-    background-color: #0d1428;
-    color: rgb(202,213,245);
-    cursor: pointer;
-}
-
 
 .mission {
     grid-column: 2;
     grid-row: 1;
     position: relative;
     padding: 4px 8px;
-}
-
-.mission-background {
-    width: 100%;
-    height: 100%;
-    background-image: url("../assets/pictures/ezgif.com-gif-maker-9-1000x340.webp");
-    background-size: cover;
-    background-position: center;
-    filter: blur(5px);
 }
 
 .mission h2 {
@@ -64,4 +38,11 @@ body {
     background-color: #0d1428;
     border-radius: 10px;
     padding: 8px 16px;
+}
+
+#landing-page-slider {
+    grid-row: 2;
+    grid-column: 1 / span 3;
+    width: 80%;
+    margin: 0 auto;
 }
