--- a/components/column-chart/column-chart.html
+++ b/components/column-chart/column-chart.html
@@ -15,24 +15,24 @@
                 <div class="grid-line" style="top: 80%;"></div>
             </div>
             <div class="line">
-                <div class="data-point" style="left: 5%; height: 60%;"></div>
-                <div class="data-point-female" style="left: 10%; height: 70%;"></div>
+                <div class="data-point" style="left: 5%;"></div>
+                <div class="data-point-female" style="left: 10%; "></div>
 
-                <div class="data-point" style="left: 20%; height: 40%;"></div>
-                <div class="data-point-female" style="left: 25%; height: 90%;"></div>
+                <div class="data-point" style="left: 20%; "></div>
+                <div class="data-point-female" style="left: 25%; "></div>
 
-                <div class="data-point" style="left: 35%; height: 50%;"></div>
-                <div class="data-point-female" style="left: 40%; height: 40%;"></div>
+                <div class="data-point" style="left: 35%; "></div>
+                <div class="data-point-female" style="left: 40%; "></div>
 
-                <div class="data-point" style="left: 50%; height: 80%;"></div>
-                <div class="data-point-female" style="left: 55%; height: 60%;"></div>
+                <div class="data-point" style="left: 50%; "></div>
+                <div class="data-point-female" style="left: 55%;"></div>
 
-                <div class="data-point" style="left: 65%; height: 75%;"></div>
-                <div class="data-point-female" style="left: 70%; height: 30%;"></div>
+                <div class="data-point" style="left: 65%;"></div>
+                <div class="data-point-female" style="left: 70%; "></div>
 
 
-                <div class="data-point" style="left: 80%; height: 50%;"></div>
-                <div class="data-point-female" style="left: 85%; height: 45%;"></div>
+                <div class="data-point" style="left: 80%; "></div>
+                <div class="data-point-female" style="left: 85%;"></div>
 
 
             </div>
