--- a/components/pie-chart/pie-chart.html
+++ b/components/pie-chart/pie-chart.html
@@ -6,11 +6,55 @@
 </head>
 
 <body>
+    <p class="pie-chart-title">The percentage of types of drugs seized.</p>
     <div class="charts-wrapper__pie-chart-container">
-        <div class="charts-wrapper__pie-chart-container__wrapper">
-            <div class="charts-wrapper__pie-chart-container__wrapper__item-html">19% HTML</div>
-            <div class="charts-wrapper__pie-chart-container__wrapper__item-css">81% CSS</div>
+        
+        <div class="pie-wrap">
+            <div class="light-yellow entry">
+                <p>25%</p>
+                <p class="entry-value"></p>
+            </div>
+            <div class="sky-blue entry">
+                <p>25%</p>
+                <p class="entry-value"></p>
+            </div>
+            <div class="pink entry">
+                <p>12.5%</p>
+                <p class="entry-value"> </p>
+            </div>
+            <div class="purple entry">
+                <p> 12.5%</p>
+                <p class="entry-value"></p>
+            </div>
+            <div class="green entry">
+                <p> 12.5%</p>
+                <p class="entry-value"></p>
+            </div>
+            <div class="wheat entry">
+                <p> 12.5%</p>
+                <p class="entry-value"></p>
+            </div>
         </div>
+        <div class="pie-chart__labels">
+            <input type="radio" id="marijuana" name="values" class="marijuana-key" />
+            <label for="marijuana" class="marijuana-label">Marijuana</label>
+
+            <input type="radio" name="values" id="cocaine" class="cocaine-key" />
+            <label for="cocaine" class="cocaine-label"> Cocaine</label>
+
+            <input type="radio" name="values" id="MDMA" class="MDMA-key" />
+            <label for="MDMA" class="MDMA-label"> MDMA</label>
+
+            <input type="radio" name="values" id="heroin" class="heroin-key" />
+            <label for="heroin" class="heroin-label"> Heroin</label>
+
+            <input type="radio" name="values" id="amphetamine" class="amphetamine-key" />
+            <label for="amphetamine" class="amphetamine-label"> Amphetamine</label>
+
+            <input type="radio" name="values" id="cannabis-resin" class="cannabis-resin-key" />
+            <label for="cannabis-resin" class="cannabis-resin-label"> Cannabis resin</label>
+        </div>
+
     </div>
 </body>
 
