--- a/components/column-chart/column-chart.html
+++ b/components/column-chart/column-chart.html
@@ -6,6 +6,17 @@
 </head>
 
 <body>
+    <p>Report of people caught under the drugs influence.</p>
+    <div class="column-chart-labels">
+        <div class="column-chart-labels__flex">
+            <div class="male-color"></div>
+            <span>Male</span>
+        </div>
+        <div class="column-chart-labels__flex">
+            <div class="female-color"></div>
+            <span>Female</span>
+        </div>
+    </div>
     <div class="chart-container">
         <div class="chart">
             <div class="grid-lines">
@@ -47,7 +58,9 @@
 
 
         </div>
+
     </div>
+
 </body>
 
 </html>
