--- a/styles/chart.css
+++ b/styles/chart.css
@@ -96,10 +96,18 @@ body {
     grid-row: 2;
     grid-column: 2;
 }
+.display-flex{
+    display: flex;
+}
+.flex-direction-column{
+    flex-direction: column;
+    gap: 15px;
+}
 .charts-container__flex-container{
     
     display: flex;
     justify-content: space-evenly;
+    margin-top:20px;
 }
 .charts-container__flex-container-item{
 
@@ -111,4 +119,28 @@ body {
 }
 .charts-container__flex-container-item_details-line-chart{
     width: 40%;
+    padding-left: 0rem;
+}
+
+.display-flex span{
+    font-size: 12px;
+}
+.square{
+    width: 15px;
+    height: 10px;
+    position: relative;
+    top:3px;
+    margin-right: 5px;
+}
+.line-green{
+    background-color: green;
+}
+.line-red{
+    background-color: red;
+}
+.line-blue{
+    background-color: blue;
+}
+.line-yellow{
+    background-color: yellow;
 }
