landing page login+presentation,responsive started

--- a/components/login-form/login.html
+++ b/components/login-form/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h3>Join our comunity</h3>
+    <b>Join us to delve into comprehensive statistics revealing drug use </b>
 <div class="overlay" id="overlay">
     <div class="login-form shown">
         <h2>Please login</h2>
