--- a/components/slider/slider.css
+++ b/components/slider/slider.css
@@ -11,7 +11,7 @@
   
   .slide {
     position: relative;
-    flex: 0 0 75%;
+    flex: 0 0 70%;
     margin: 0 30px; 
   }
   
@@ -20,6 +20,7 @@
     width: 100%;
     height: auto;
     aspect-ratio: 16 / 10;
+    filter: blur(5px);
   }
   
   .control {
@@ -62,3 +63,49 @@
     margin: 10px 0;
   }
   
+  @media screen and (max-width : 768px) {
+    body {
+      display: grid;
+      grid-template-rows: 15vh 1fr 25vh;
+      grid-template-columns: 1fr;
+    }
+    .carousel {
+      height: 100%;
+      position: relative;
+      width: calc(100% - 36px); /* Width of the screen minus 12px margin on each side */
+      margin: 0 auto; /* Center the carousel horizontally */
+      overflow: hidden;
+    }
+    
+    .slides {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      transition: transform 0.5s ease;
+    }
+    
+    .slide {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      flex: 0 0 calc(100%); /* Adjust width of slides to occupy one-third of the screen */
+      margin: 0 6px; /* 12px total margin (6px on each side) */
+    }
+    .slide img {
+      height: 100%;
+    }
+    .caption{
+      height: 40%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      flex-direction: column;
+    }
+    .caption h2{
+      font-size: 1.4rem;
+    }
+    .caption p {
+      font-size: 14px;
+      padding: 8px 16px;
+    }
+  }
