--- a/components/pie-chart/pie-chart.html
+++ b/components/pie-chart/pie-chart.html
@@ -7,7 +7,7 @@
 
 <body>
     <p class="pie-chart-title">The percentage of types of drugs seized.</p>
-    <div class="charts-wrapper__pie-chart-container">
+    <div class="charts-wrapper__pie-chart-container" id="pie-chart">
         
         <div class="pie-wrap">
             <div class="light-yellow entry">
