- added live filter for counties

--- a/components/diagram/diagrams.html
+++ b/components/diagram/diagrams.html
@@ -7,5 +7,20 @@
     <div class="diagrams-container">
         <object class="map" id="myMap" data="assets/svg/romania.svg" type="image/svg+xml"></object>
     </div>
+    <div class="mobile-diagram">
+        <div class="mobile-diagram-container">
+            <header class="header">
+                <h4 class="title">County filter</h4>
+                <small class="subtitle">Search by county name</small>
+                <input type="text" id="filter" placeholder="Search..">
+            </header>
+    
+            <ul id="result" class="user-list">
+    
+                <li>Loading...</li>
+    
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
