--- a/components/diagram/diagram.css
+++ b/components/diagram/diagram.css
@@ -7,3 +7,108 @@
     display: flex;
     justify-content: center;
 }
+
+.mobile-diagram-container {
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 7px;
+  width: 300px;
+  width: 100%;
+}
+
+.header {
+  background-color: #8691ac;
+  padding: 30px 20px;
+  border-radius: 7px;
+}
+
+.title {
+  margin: 0;
+  color: #fff;
+  font-size: 20px;
+}
+
+.subtitle {
+  color: #fff;
+  display: inline-block;
+  opacity: 0.8;
+  padding: 10px 0;
+}
+.header input::placeholder{
+    color: white;
+}
+.header input {
+  background-color: #636d87;
+  padding: 8px;
+  font-size: 15px;
+  color: white;
+  width: 90%;
+  border: none;
+  border-radius: 25px;
+}
+
+.header input:focus {
+  outline: none;
+}
+
+.user-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+.user-list li {
+  display: flex;
+  padding: 20px;
+}
+
+.user-list li:not(:last-of-type) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.user-list li img {
+  object-fit: cover;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+.user-list .user-info{
+    margin-left: 15px;
+}
+.county-link{
+
+    color: black;
+}
+.user-background{
+    background-color: #ced3df;
+}
+.user-list .user-info h4 {
+  margin: 0 0 10px;
+  font-size: 15px;
+}
+
+.user-list .user-info p{
+    font-size: 12px;
+}
+
+.user-list li.hide{
+    display: none;
+}
+.mobile-diagram-container{
+    display: none;
+}
+@media screen and (max-width: 1100px){
+
+    .diagrams-container{
+        display: none !important;
+    }
+    .mobile-diagram-container{
+        display: block !important;
+    }
+}
+
+@media screen and (max-width: 1100px){
+
+}
