landing page responsiveness

--- a/components/login-form/login.html
+++ b/components/login-form/login.html
@@ -23,7 +23,7 @@
             <input type="email" id="regEmail" class="fields-padding" placeholder="Email" required>
             <input type="password" id="regPassword" class="fields-padding" placeholder="Password" required>
             <button type="submit" class="fields-padding" onclick="checkUsers()">Register</button>
-            <a class="go-to-login" href="#" onclick="showLoginForm()">Don't have an account?</a>
+            <a class="go-to-login" href="#" onclick="showLoginForm()">Already have an account?</a>
 
         </form>
     </div>
