--- a/components/login-form/login-form.css
+++ b/components/login-form/login-form.css
@@ -1,6 +1,4 @@
 .overlay {
-    /* grid-row: 2;
-    grid-column: 2; */
     font-family: system-ui;
     display: none;
     position: fixed;
@@ -10,6 +8,10 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
+}
+
+b {
+    text-align: center;
 }
 
 .overlay.shown {
