--- a/components/login-form/login-form.css
+++ b/components/login-form/login-form.css
@@ -16,7 +16,7 @@ b {
 
 .overlay.shown {
     display: block;
-    opacity: 1; /* Make it fully visible when shown */
+    opacity: 1;
 }
 
 .login-form {
