--- a/components/login-form/login.html
+++ b/components/login-form/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="components/login-form/login-form.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="login-form.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <b>Join us to delve into comprehensive statistics revealing drug use </b>
 <div class="overlay" id="overlay">
     <div class="login-form shown">
         <h2>Please login</h2>
