--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -1,18 +1,15 @@
 body {
     font-family: system-ui;
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 15vw 1fr 15vw;
-    grid-template-rows: 15vh 1fr 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background: rgb(202,213,245);
     background: radial-gradient(circle, rgba(202,213,245,1) 0%, rgba(186,208,235,1) 100%);
     gap: 15px;
 }
 
 .join-comunity {
-    grid-row: 1;
-    grid-column: 1;
     position: relative;
     display: flex;
     justify-content: center;
@@ -20,8 +17,6 @@ body {
 }
 
 .mission {
-    grid-column: 2;
-    grid-row: 1;
     position: relative;
     padding: 4px 8px;
     display: flex;
@@ -51,15 +46,11 @@ body {
 }
 
 #landing-page-slider {
-    grid-row: 2;
-    grid-column: 1 / span 3;
     width: 80%;
     margin: 0 auto;
 }
 
 #banner-wrapper {
-    grid-column: 1 / span 3;
-    grid-row: 3;
     background-color: #0d1428;
     margin-top: -130px;
     display: flex;
@@ -83,29 +74,14 @@ body {
     padding-bottom: 48px;
 }
 
-@media screen and (max-width : 1024px) {
-    #banner-wrapper {
-        margin-top: -250px;
-    }
-    #banner-wrapper h2 {
-        padding-top: 100px;
-    }
-    #banner-wrapper p{
-        padding-top: 24px;
-    }
+#community-cards {
+    background-color: #0d1428;
+    width: 100vw;
+    padding-bottom: 48px;
 }
 
 @media screen and (max-width : 768px) {
-    body {
-        grid-template-columns: 1fr ;
-        grid-template-rows: 15vh 1fr 25vh;
-        column-gap: 0;
-        row-gap: 15px;
-        margin: 0;
-    }
     .mission {
-        grid-column: 1 / span 3;
-        grid-row: 1;
         max-width: 100vw;
     }
     .mission-title {
@@ -116,17 +92,14 @@ body {
         text-align: center;
     }
     #landing-page-slider {
-        grid-row: 2;
         width: 100%;
     }
 
     #banner-wrapper {
-        height: 500px;
-        grid-column: 1;
         max-width: 100vw;
     }
     #banner-wrapper h2 {
-        padding-top: 30%;
+        padding-top: 25%;
         font-size: 1.5rem;
         text-align: center;
         letter-spacing: 1px;
