--- a/components/line-chart/line-chart.html
+++ b/components/line-chart/line-chart.html
@@ -8,22 +8,8 @@
 <body>
     <div class="charts-wrapper__line-chart">
         <div class="line-chart-container">
-            <svg class="line-chart">
-                <line class="axis-x" x1="20" y1="180" x2="720" y2="180"></line> 
-                <line class="axis-y" x1="20" y1="20" x2="20" y2="180"></line>
-            
-                <line class="grid-line" x1="20" y1="60" x2="520" y2="60"></line> 
-                <line class="grid-line" x1="20" y1="100" x2="520" y2="100"></line> 
-                <line class="grid-line" x1="20" y1="140" x2="520" y2="140"></line> 
-                <line class="grid-line" x1="20" y1="180" x2="520" y2="180"></line> 
-            
-                <g class="labels-x"></g>
-            
-                <polyline class="polyline" points=""></polyline>
-                <polyline class="polyline" points=""></polyline>
-                <polyline class="polyline" points=""></polyline>
-                <polyline class="polyline" points=""></polyline>
-            </svg>
+            <canvas id="myCanvas" width="800" height="400"></canvas>
+
             
         </div>
 
