--- a/components/column-chart/column-chart.html
+++ b/components/column-chart/column-chart.html
@@ -25,40 +25,10 @@
                 <div class="grid-line" style="top: 60%;"></div>
                 <div class="grid-line" style="top: 80%;"></div>
             </div>
-            <div class="line">
-                <div class="data-point" style="left: 5%;"></div>
-                <div class="data-point-female" style="left: 10%; "></div>
 
-                <div class="data-point" style="left: 20%; "></div>
-                <div class="data-point-female" style="left: 25%; "></div>
-
-                <div class="data-point" style="left: 35%; "></div>
-                <div class="data-point-female" style="left: 40%; "></div>
-
-                <div class="data-point" style="left: 50%; "></div>
-                <div class="data-point-female" style="left: 55%;"></div>
-
-                <div class="data-point" style="left: 65%;"></div>
-                <div class="data-point-female" style="left: 70%; "></div>
-
-
-                <div class="data-point" style="left: 80%; "></div>
-                <div class="data-point-female" style="left: 85%;"></div>
-
-
-            </div>
+            <div class="line" id="line"> </div>
         </div>
-        <div class="years">
-            <span class="year" style="left: 7.5%;">2015</span>
-            <span class="year" style="left: 22.5%;">2016</span>
-            <span class="year" style="left: 37.5%;">2017</span>
-            <span class="year" style="left: 52.5%;">2018</span>
-            <span class="year" style="left: 67.5%;">2019</span>
-            <span class="year" style="left: 82.5%;">2020</span>
-
-
-        </div>
-
+        <div class="years" id="years"></div>
     </div>
 
 </body>
