--- a/components/login-form/login.html
+++ b/components/login-form/login.html
@@ -11,7 +11,7 @@
     <div class="login-form shown">
         <h2>Please login</h2>
         <form id="login-form" class="login-form__form">
-            <input type="text" id="username" class="fields-padding" placeholder="Username" required>
+            <input type="text" id="username" class="fields-padding" placeholder="Email" required>
             <input type="password" id="password" class="fields-padding" placeholder="Password" required>
             <button type="button" class="fields-padding" id="loginButton" onclick="checkLoggedUser()">Login</button>
             <a class="go-to-register" href="#" onclick="showRegisterForm()">Don't have an account? Register</a>
@@ -23,7 +23,7 @@
             <input type="text" id="regUsername" class="fields-padding" placeholder="Username" required>
             <input type="email" id="regEmail" class="fields-padding" placeholder="Email" required>
             <input type="password" id="regPassword" class="fields-padding" placeholder="Password" required>
-            <button type="submit" class="fields-padding" onclick="checkUsers()">Register</button>
+            <button type="submit" class="fields-padding" onclick="saveUser()">Register</button>
             <a class="go-to-login" href="#" onclick="showLoginForm()">Already have an account?</a>
 
         </form>
