add download CSV file for charts

--- a/components/column-chart/column-chart.html
+++ b/components/column-chart/column-chart.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <p>Report of people caught under the drugs influence.</p>
+
+    <p>Report of people caught under the drugs influence. <i class="fa fa-download" id="download-csv" title="Download report of people in CSV file format."></i></p>
     <div class="column-chart-labels">
         <div class="column-chart-labels__flex">
             <div class="male-color"></div>
@@ -30,6 +31,7 @@
         </div>
         <div class="years" id="years"></div>
     </div>
+    <input type="hidden" id="chart-value-hidden" />
 
 </body>
 
