--- a/components/column-chart/column-chart.css
+++ b/components/column-chart/column-chart.css
@@ -10,6 +10,14 @@
   overflow: hidden;
   position: relative;
 }
+#download-csv{
+
+  cursor: pointer;
+  color: #5f5c5c;
+  font-size: 20px;
+  padding-left:10px;
+}
+
 .chart {
   width: 100%;
   height: 300px;
