--- a/components/line-chart/line-chart.css
+++ b/components/line-chart/line-chart.css
@@ -15,6 +15,13 @@
   margin: 20px;
 }
 
+#download-popularity{
+  cursor: pointer;
+  color: #5f5c5c;
+  font-size: 20px;
+  padding-left:10px;
+}
+
 .line-chart {
   width: 100%;
   height: 100%;
