--- a/components/pie-chart/pie-chart.css
+++ b/components/pie-chart/pie-chart.css
@@ -66,7 +66,7 @@
 }
 
 .purple{
-  background-color: yellow;
+  background-color: skyblue;
   color: black; 
   height:50%;
   width: 50%;
@@ -104,14 +104,14 @@
 
 /* *the individual entries* */
 
-.sky-blue{
+.red{
   background-color: red;
   height:50%;
   width: 50%;
   display: block;
 }
 
-.light-yellow{
+.dark-blue{
   background-color: blue;
   height:50%;
   width: 50%;
