--- a/components/pie-chart/pie-chart.html
+++ b/components/pie-chart/pie-chart.html
@@ -9,31 +9,7 @@
     <p class="pie-chart-title">The percentage of types of drugs seized.</p>
     <div class="charts-wrapper__pie-chart-container" id="pie-chart">
         
-        <div class="pie-wrap">
-            <div class="light-yellow entry">
-                <p>25%</p>
-                <p class="entry-value"></p>
-            </div>
-            <div class="sky-blue entry">
-                <p>25%</p>
-                <p class="entry-value"></p>
-            </div>
-            <div class="pink entry">
-                <p>12.5%</p>
-                <p class="entry-value"> </p>
-            </div>
-            <div class="purple entry">
-                <p> 12.5%</p>
-                <p class="entry-value"></p>
-            </div>
-            <div class="green entry">
-                <p> 12.5%</p>
-                <p class="entry-value"></p>
-            </div>
-            <div class="wheat entry">
-                <p> 12.5%</p>
-                <p class="entry-value"></p>
-            </div>
+        <div class="pie-wrap" id="pie-wrap">
         </div>
         <div class="pie-chart__labels">
             <input type="radio" id="marijuana" name="values" class="marijuana-key" />
@@ -56,6 +32,7 @@
         </div>
 
     </div>
+    <script src="components/pie-chart/pie-chart.js"></script>
 </body>
 
 </html>
